k8s/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          image: ninadm13/auth-dc:latest
          ports:
            - containerPort: 3000
